syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "GrpcService1";

package attendance;

// The greeting service definition.
service Attendance {
  // Sends a greeting
  rpc GetAttendance (AttendanceRequest) returns (stream AttendanceReply);
}

// The request message containing the user's name.
message AttendanceRequest {
  string empid = 1;
  string date = 2;
}

// The response message containing the greetings.
message AttendanceReply {
  string empid=1;
  string attdatetime = 2;
  string atttype = 3;
}
